# bucket-jai

./: Cargo.toml  LICENSE  README.md  dockerfile
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: gql.rs  hash.rs  main.rs  redis.rs
